# spark_advisors_challenge

./: COMMENTS.md  README.md  pyproject.toml
second_lowest_cost_plan_finder/: dev-requirements.txt  manage.py  pytest.ini  requirements.txt  run_app.sh
second_lowest_cost_plan_finder/plan_finder/: apps.py  constants.py  models.py  utils.py
second_lowest_cost_plan_finder/plan_finder/management/commands/: find_second_lowest_cost_plan.py  generate_blank_slcsp.py  load_plans.py  load_zip_rate_areas.py
second_lowest_cost_plan_finder/plan_finder/migrations/: 0001_initial.py
second_lowest_cost_plan_finder/plan_finder/tests/: conftest.py  sample_plans.csv  sample_slcsp.csv  sample_zips.csv  test_models.py  test_utils.py
second_lowest_cost_plan_finder/second_lowest_cost_plan_finder/: asgi.py  settings.py  urls.py  wsgi.py
second_lowest_cost_plan_finder/static_files/: notes.md
